# proto/gen/api/v1/memo_service.pb.go
@@ -1593,10 +1593,8 @@ func (x *DeleteMemoReactionRequest) GetReactionId() int32 {
 
 type GetMemosFromPastMonthsRequest struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
-	// The creator ID to filter by.  Format: users/{id}
-	Creator string `protobuf:"bytes,1,opt,name=creator,proto3" json:"creator,omitempty"`
 	// The number of past months to retrieve.  If 0 or negative, retrieve all.
-	Months        int32 `protobuf:"varint,2,opt,name=months,proto3" json:"months,omitempty"`
+	Months        int32 `protobuf:"varint,1,opt,name=months,proto3" json:"months,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -1629,13 +1627,6 @@ func (x *GetMemosFromPastMonthsRequest) ProtoReflect() protoreflect.Message {
 // Deprecated: Use GetMemosFromPastMonthsRequest.ProtoReflect.Descriptor instead.
 func (*GetMemosFromPastMonthsRequest) Descriptor() ([]byte, []int) {
 	return file_api_v1_memo_service_proto_rawDescGZIP(), []int{25}
-}
-
-func (x *GetMemosFromPastMonthsRequest) GetCreator() string {
-	if x != nil {
-		return x.Creator
-	}
-	return ""
 }
 
 func (x *GetMemosFromPastMonthsRequest) GetMonths() int32 {
@@ -1911,11 +1902,9 @@ var file_api_v1_memo_service_proto_rawDesc = string([]byte{
 	0x6d, 0x6f, 0x52, 0x65, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
 	0x74, 0x12, 0x1f, 0x0a, 0x0b, 0x72, 0x65, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64,
 	0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x0a, 0x72, 0x65, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e,
-	0x49, 0x64, 0x22, 0x57, 0x0a, 0x1d, 0x47, 0x65, 0x74, 0x4d, 0x65, 0x6d, 0x6f, 0x73, 0x46, 0x72,
+	0x49, 0x64, 0x22, 0x37, 0x0a, 0x1d, 0x47, 0x65, 0x74, 0x4d, 0x65, 0x6d, 0x6f, 0x73, 0x46, 0x72,
 	0x6f, 0x6d, 0x50, 0x61, 0x73, 0x74, 0x4d, 0x6f, 0x6e, 0x74, 0x68, 0x73, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x12, 0x1e, 0x0a, 0x07, 0x63, 0x72, 0x65, 0x61, 0x74, 0x6f, 0x72, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x09, 0x42, 0x04, 0xe2, 0x41, 0x01, 0x02, 0x52, 0x07, 0x63, 0x72, 0x65, 0x61,
-	0x74, 0x6f, 0x72, 0x12, 0x16, 0x0a, 0x06, 0x6d, 0x6f, 0x6e, 0x74, 0x68, 0x73, 0x18, 0x02, 0x20,
+	0x65, 0x73, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x6d, 0x6f, 0x6e, 0x74, 0x68, 0x73, 0x18, 0x01, 0x20,
 	0x01, 0x28, 0x05, 0x52, 0x06, 0x6d, 0x6f, 0x6e, 0x74, 0x68, 0x73, 0x22, 0x4a, 0x0a, 0x1e, 0x47,
 	0x65, 0x74, 0x4d, 0x65, 0x6d, 0x6f, 0x73, 0x46, 0x72, 0x6f, 0x6d, 0x50, 0x61, 0x73, 0x74, 0x4d,
 	0x6f, 0x6e, 0x74, 0x68, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x28, 0x0a,
